--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <span>Johns Material Demo</span>
 
     <span class="example-spacer"></span>
-    
+
     <button mat-button>Stuff</button>
     <button mat-button>Stuff</button>
     <button mat-button>Stuff</button>
@@ -17,7 +17,7 @@
   </mat-form-field>
 
   <br>
-  
+
   <button mat-raised-button (click)="showAnswer()">Answer me</button>
   <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
 </mat-card>
@@ -26,3 +26,84 @@
 <mat-card *ngIf="answerDisplay">
   <h1>{{ answerDisplay }}, that's who.</h1>
 </mat-card>
+
+<br>
+
+<mat-tab-group>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      The
+      <em>best</em> pasta
+    </ng-template>
+    <h1>Best Pizza joints</h1>
+    <mat-list role="list">
+      <mat-list-item role="listitem">Rays on 5th</mat-list-item>
+      <mat-list-item role="listitem">Fellinis</mat-list-item>
+      <mat-list-item role="listitem">Chuckie Cheese</mat-list-item>
+    </mat-list>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>thumb_down</mat-icon> The worst sushi
+    </ng-template>
+    <h1>Terrible sushi restaurants</h1>
+    <mat-list role="list">
+      <mat-list-item role="listitem">Sushiko</mat-list-item>
+      <mat-list-item role="listitem">Panda Express</mat-list-item>
+      <mat-list-item role="listitem">Publix</mat-list-item>
+    </mat-list>
+  </mat-tab>
+</mat-tab-group>
+
+<br>
+
+<mat-accordion class="example-headers-align">
+  <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Personal data
+      </mat-panel-title>
+      <mat-panel-description>
+        Type your name and age
+        <mat-icon>account_circle</mat-icon>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <mat-form-field>
+      <input matInput placeholder="First name">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput type="number" min="1" placeholder="Age">
+    </mat-form-field>
+
+    <mat-action-row>
+      <button mat-button color="primary" (click)="nextStep()">Next</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Destination
+      </mat-panel-title>
+      <mat-panel-description>
+        Type the country name
+        <mat-icon>map</mat-icon>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <mat-form-field>
+      <input matInput placeholder="Country">
+    </mat-form-field>
+
+    <mat-action-row>
+      <button mat-button color="warn" (click)="prevStep()">Previous</button>
+      <button mat-button color="primary" (click)="nextStep()">End</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+
+</mat-accordion>
+
+
+
